--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
-    "nodemon": "^3.1.9",
-    "rxpress": "^0.3.0"
+    "nodemon": "^3.1.9"
   },
   "devDependencies": {
     "prettier": "^3.5.3"
